# evenderch2

./: Astar.cpp  Astar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  Data.cpp  Data.h  FileCacheManager.cpp  FileCacheManager.h  Lexer.cpp  Lexer.h  Main.cpp  Matrix.cpp  Matrix.h  MatrixSolver.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.cpp  State.h  StringReverse.cpp  StringReverse.h  StringReverser.cpp  StringReverser.h  ThreadInfo.h
Algorithms/: Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  ISearcher.h  MatrixSearchable.cpp  MatrixSearchable.h  Searchable.h  Searcher.h  State.h
Data/: Lexer.cpp  Lexer.h  MatrixSolver.cpp  MatrixSolver.h  Solver.h
Server/: CacheManager.h  MyParallelServer.h  MyTestClientHandler.h  Server.h  ThreadInfo.cpp
server/: ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  MyParallelServer.cpp  MyTestClientHandler.h
